vlib/v/checker/tests/check_fn_init_as_mutable.out
vlib/v/checker/tests/check_fn_init_as_mutable.vv:3:16: notice: unused parameter: `ms`
    1 | struct MyStruct {}
    2 | 
    3 | fn process(mut ms MyStruct) {}
      |                ~~
    4 | 
    5 | fn main() {
vlib/v/checker/tests/check_fn_init_as_mutable.vv:6:14: error: cannot pass a struct initialization as `mut`, you may want to use a variable `mut var := MyStruct{....}`
    4 | 
    5 | fn main() {
    6 |     process(mut MyStruct{})
      |                 ~~~~~~~~~~
    7 | }
